--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ containerization/helm-charts/templates/configmap/tpl/
 containerization/docker-images/ci
 containerization/docker-images/*.gz
 containerization/values.json
+containerization/helm-charts/bk-ci*.tgz
 src/backend/turbo/**/build/
 src/backend/turbo/release/
 src/backend/turbo/containerization/
