--- a/scripts/bkenv.properties
+++ b/scripts/bkenv.properties
@@ -41,8 +41,6 @@ BK_TURBO_PUBLIC_URL=http://turbo.$BK_DOMAIN
 BK_CI_WEWORK_HOST=https://qyapi.weixin.qq.com
 # BK_CI_WEWORK_API_URL 默认值为：https://qyapi.weixin.qq.com, 企业微信服务端host，用于调用企业微信api接口
 BK_CI_WEWORK_API_URL=
-# BK_CI_NOTIFY_WEWORK_API_URL 默认值为：https://qyapi.weixin.qq.com, 企业微信服务端host，用于调用企业微信api接口.
-BK_CI_NOTIFY_WEWORK_API_URL=https://qyapi.weixin.qq.com
 
 ##########
 # 1-基础配置
@@ -205,7 +203,12 @@ BK_CI_REPOSITORY_SVN_API_URL=
 BK_CI_REPOSITORY_SVN_WEBHOOK_URL=
 # BK_CI_STORE_USER_AVATARS_URL默认为$BK_PAAS_PUBLIC_URL/console/static/img/getheadimg.jpg?. 无需修改. PaaS用户头像, 目前仅显示默认头像.
 BK_CI_STORE_USER_AVATARS_URL=$BK_PAAS_PUBLIC_URL/console/static/img/getheadimg.jpg?
-
+# BK_CI_FQDN_CERT BKCI站点的HTTPS证书存储位置, 默认值为空表示没有开启HTTPS，用于Agent与BKCI走HTTPS通信使用
+BK_CI_FQDN_CERT=
+# BK_CI_NOTIFY_WEWORK_API_URL 默认值为：https://qyapi.weixin.qq.com, 企业微信服务端host，用于调用企业微信api接口.
+BK_CI_NOTIFY_WEWORK_API_URL=https://qyapi.weixin.qq.com
+# BK_CI_NOTIFY_WEWORK_SEND_CHANNEL 发送rtx的通道: weworkAgent 企业微信应用,blueking 蓝鲸消息, weworkRobot 企业微信机器人(待开放)
+BK_CI_NOTIFY_WEWORK_SEND_CHANNEL=
 ##########
 # 4-微服务依赖
 ##########
