--- a/containerization/values.yaml
+++ b/containerization/values.yaml
@@ -79,6 +79,34 @@ influxdb:
       password: password
       token: GnnsHwEcQ07sqpidcX2s
 
+mongodb:
+  # 是否部署mongodb
+  # 如果需要使用外部数据库，设置为false并配置external.mongodb
+  enabled: true
+  auth:
+    enabled: true
+    rootPassword: bkci
+    password: bkci
+    username: bkci
+    database: bkci
+  persistence:
+    subPath: mongodb
+  initdbScripts:
+    create_admin_user.sh: |
+      $MONGODB_BIN_DIR/mongo admin --host 127.0.0.1 --port $MONGODB_PORT_NUMBER -u root -p $MONGODB_ROOT_PASSWORD << EOF
+      use db_turbo
+      db.createUser({ user: "$MONGODB_USERNAME" , pwd: "$MONGODB_PASSWORD" , roles: [{role: "dbOwner" , db:"db_turbo"}]})
+      use db_quartz
+      db.createUser({ user: "$MONGODB_USERNAME" , pwd: "$MONGODB_PASSWORD" , roles: [{role: "dbOwner" , db:"db_quartz"}]})
+      EOF
+
+external:
+  mongodb:
+    turbo:
+      turboUrl: mongodb://bkci:bkci@localhot:27017/db_turbo
+      quartzUrl: mongodb://bkci:bkci@localhot:27017/db_quart
+
+
 ## 是否开启数据持久化，false则使用emptyDir类型volume, pod结束后数据将被清空，无法持久化
 persistence:
   enabled: true
@@ -916,6 +944,45 @@ angetless:
   podLabels: {}
   podAnnotations: {}
   priorityClassName: ""
+
+turbo:
+  enabled: true
+  image:
+    registry: mirrors.tencent.com
+    repository: ruitaoyuan/turbo-backend
+    tag: 0.0.12
+    pullPolicy: IfNotPresent
+    pullSecrets: [ ]
+  replicaCount: 1
+  hostAliases: [ ]
+  resources:
+    limits: { }
+    requests: { }
+  containerSecurityContext:
+    enabled: false
+    runAsUser: 1001
+    runAsNonRoot: true
+  podSecurityContext:
+    enabled: false
+    fsGroup: 1001
+  podAffinityPreset: ""
+  podAntiAffinityPreset: soft
+  nodeAffinityPreset:
+    type: ""
+    key: ""
+    values: [ ]
+  affinity: { }
+  nodeSelector: { }
+  tolerations: [ ]
+  podLabels: { }
+  podAnnotations: { }
+  priorityClassName: ""
+  config:
+    tbs:
+      rootpath: __BK_TURBO_TBS_ROOTPATH__
+      urltemplate: __BK_CI_TURBO_URL_TEMPLATE__
+    devops:
+      rootpath: __BK_CI_PUBLIC_URL__
 
 # gateway Deployment
 gateway:
