--- a/support-files/templates/#etc#ci#application-dispatch-kubernetes.yml
+++ b/support-files/templates/#etc#ci#application-dispatch-kubernetes.yml
@@ -39,9 +39,7 @@ dispatch:
         host: xx.artifactory.xxx
         userName: xxxx
         password: xxxx
-    label: 
-      container: bkci-dispatch-kubenetes-container
-      job: bkci-dispatch-kubenetes-job
+    label:  bkci-dispatch-kubenetes
     volumeMount:
       path: /etc/config
     volume:
