--- a/src/backend/ci/core/dispatch-kubernetes/boot-dispatch-kubernetes/src/main/resources/application.yml
+++ b/src/backend/ci/core/dispatch-kubernetes/boot-dispatch-kubernetes/src/main/resources/application.yml
@@ -34,6 +34,8 @@ dispatch:
       configMap:
         key: initsh.properties
         path: dispatch_kubernetes_init.sh
+      hostPath:
+        hostdir: /data/volume/bkci/dispatch-kubernetes
 
 pipeline:
   build:
