--- a/support-files/agent-package/config/.agent.properties
+++ b/support-files/agent-package/config/.agent.properties
@@ -25,3 +25,4 @@ landun.fileGateway=##fileGateway##
 devops.parallel.task.count=4
 landun.env=##landun.env##
 devops.agent.collectorOn=##agentCollectorOn##
+devops.agent.ignoreLocalIps=127.0.0.1,192.168.255.10
